--- a/nuxt/locales/de.json
+++ b/nuxt/locales/de.json
@@ -1,5 +1,6 @@
 {
   "globalLoading": "Lade...",
+  "globalOgSeoDescription": "DJ cReals Website.",
   "globalValidationMaxValue": "Wert zu groß",
   "globalValidationRequired": "Pflichtfeld",
   "globalValidationShortness": "Zu kurz"
