--- a/nuxt/locales/en.json
+++ b/nuxt/locales/en.json
@@ -1,5 +1,6 @@
 {
   "globalLoading": "Loading...",
+  "globalOgSeoDescription": "DJ cReal's website.",
   "globalValidationMaxValue": "Above maximum value",
   "globalValidationRequired": "Required",
   "globalValidationShortness": "Too short"
