fix(suggestion): add missing validation errors

--- a/nuxt/locales/de.json
+++ b/nuxt/locales/de.json
@@ -1,7 +1,6 @@
 {
   "globalLoading": "Lade...",
   "globalOgSeoDescription": "DJ cReals Website.",
-  "globalValidationMaxValue": "Wert zu groß",
-  "globalValidationRequired": "Pflichtfeld",
-  "globalValidationShortness": "Zu kurz"
+  "globalValidationLength": "Zu lang",
+  "globalValidationRequired": "Pflichtfeld"
 }
