--- a/nuxt/locales/en.json
+++ b/nuxt/locales/en.json
@@ -1,7 +1,6 @@
 {
   "globalLoading": "Loading...",
   "globalOgSeoDescription": "DJ cReal's website.",
-  "globalValidationMaxValue": "Above maximum value",
-  "globalValidationRequired": "Required",
-  "globalValidationShortness": "Too short"
+  "globalValidationLength": "Too long",
+  "globalValidationRequired": "Required"
 }
