feat(og): add proper open graph tags

--- a/nuxt/locales/de.json
+++ b/nuxt/locales/de.json
@@ -1,5 +1,6 @@
 {
   "globalLoading": "Lade...",
+  "globalOgImageAlt": "DJ cReals Logo",
   "globalOgSeoDescription": "DJ cReals Website.",
   "globalValidationLength": "Zu lang",
   "globalValidationRequired": "Pflichtfeld"
