--- a/nuxt/locales/en.json
+++ b/nuxt/locales/en.json
@@ -1,5 +1,6 @@
 {
   "globalLoading": "Loading...",
+  "globalOgImageAlt": "DJ cReal's logo",
   "globalOgSeoDescription": "DJ cReal's website.",
   "globalValidationLength": "Too long",
   "globalValidationRequired": "Required"
