feat(locales): migrate to vio

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -1,11 +1,4 @@
 {
-  "globalLoading": "Lade...",
-  "globalOgImageAlt": "DJ cReals Logo",
-  "globalOgSeoDescription": "DJ cReals Website.",
-  "globalPlaceholderUrl": "https://websei.te",
-  "globalStatusError": "Fehler",
-  "globalValidationFailed": "Bitte überprüfe deine Eingaben 🙈",
-  "globalValidationFormatUrlHttps": "Muss mit \"https://\" beginnen",
-  "globalValidationLength": "Zu lang",
-  "globalValidationRequired": "Pflichtfeld"
+  "globalSeoOgImageAlt": "DJ cReals Logo",
+  "globalSeoSiteDescription": "DJ cReals Website."
 }
