--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,11 +1,4 @@
 {
-  "globalLoading": "Loading...",
-  "globalOgImageAlt": "DJ cReal's logo",
-  "globalOgSeoDescription": "DJ cReal's website.",
-  "globalPlaceholderUrl": "https://websi.te",
-  "globalStatusError": "Error",
-  "globalValidationFailed": "Please check your input 🙈",
-  "globalValidationFormatUrlHttps": "Must start with \"https://\"",
-  "globalValidationLength": "Too long",
-  "globalValidationRequired": "Required"
+  "globalSeoOgImageAlt": "DJ cReal's logo",
+  "globalSeoSiteDescription": "DJ cReal's website."
 }
