fix(app): correct open graph image i18n

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -1,4 +1,4 @@
 {
   "globalSeoOgImageAlt": "DJ cReals Logo",
-  "globalSeoSiteDescription": "DJ cReals Website."
+  "globalSeoSiteDescription": "DJ cReals Webseite."
 }
