fix(og-image): correct locales

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -1,4 +1,6 @@
 {
   "globalSeoOgImageAlt": "DJ cReals Logo",
-  "globalSeoSiteDescription": "DJ cReals Webseite."
+  "nuxtSiteConfig": {
+    "description": "DJ cReals Webseite."
+  }
 }
