--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,4 +1,6 @@
 {
   "globalSeoOgImageAlt": "DJ cReal's logo",
-  "globalSeoSiteDescription": "DJ cReal's website."
+  "nuxtSiteConfig": {
+    "description": "DJ cReal's website."
+  }
 }
